--- a/Python/Python Standard Library/2. Built-in Functions.md
+++ b/Python/Python Standard Library/2. Built-in Functions.md
@@ -90,13 +90,38 @@ _callable_, _chr_, _classmethod_, _compile_, _complex_
 
 ### callable(object)
 
+`True` if the `object` argument appears callable, `False` if not. `True` may still fail but `False` will _never_ succeed. Instances are callable if their class has a `__call__()` method.
+
 ### chr(i)
+
+Return the character whos Unicode is the integer `i`. Ex., `chr(97)` returns "a". This is the inverse of `ord()`.
 
 ### @classmethod
 
+Transform a method into a class method. Class methods receive the class as implicit first argument; to declare a class method, use this idiom:
+
+```py3
+class C:
+    @classmethod
+    def f(cls, arg1, arg2, ...): ...
+```
+
+The `@classmethod` form is a function decorator which can be called either on the class (`C.f()`) or an instance (`C().f()`); the instance is ignored except for its class.
+
 ### compile(source, filename, mode, flags=0, dont_inherit=False, optimize=-1)
 
+Compiles `source` into a code or AST object. Code objects can be executed by `exec()` or `eval()`. `source` can be a string, byte string, or an AST object.
+
+The `filename` argument should give the file from which the code was read; pass a recognizible value if it wasnt read from a file (`'<string>' is commonly used`).
+
+The `mode` argument specifies what kind of code must be compiled. This argument can be `exec` if `source` is a sequence of statements, `eval` if it consists of a single expression, or `single` if it consists of a single interactive statement.
+
+The optionalarguments `flags` and `dont_inherit` control which future statements affect the compilation of `source`. If neither is present (or both are zero), the code is compiled with those future statements that are in effect in the code that is calling `compile()`.
+
 ### _class_ complex([real[, imag]])
+
+Returns a complex number with the value `real + imag*1j` or converts a string/number to a complex number. If the first param is a string, it will be interpreted as a complex number and the function **must** be called without a second parameter. The second parameter can never be a string. Each argument may be any numeric type. If `imag` is omitted, it defaults to zero. If both arguments are omitted, returns `0j`.
+
 
 ## D
 
@@ -104,13 +129,37 @@ _delattr_, _dict_, _dir_, _divmod_
 
 ### delattr(object, name)
 
-### _class_ dict(**kward)
+This is a relative of `setattr()`. The arguments are an object and a string; the string must be the name of one of the object's attributes. **This function deletes the named attribute**, provided the object allows it. `delattr(x, 'foobar')` is the same as `del x.foobar`.
+
+### _class_ dict(**kwarg)
+
+* _class_ dict(**kwarg)
+* _class_ dict(mapping, **kwarg)
+* _class_ dict(iterable, **kwarg)
+
+Creates a new dictionary. The `dict` object is the dictionary class.
 
 ### dir([object])
 
+Without arguments, returns the list of names in the current local scope. With an arg, attempts to return a list of valid attributes for the object.
+
+If the object has a method named `__dir__()`, the method will be called and must return the list of attributes. This allows objects that implement custom `__getattr__()` or `__getattribute__()` to customize the way `dir()` reports their attributes.
+
+If no `__dir__()` is provided, the function tries to gather the information from the `__dict__` attribute if defined and from its type object.
+
+The default `dir()` mechanism behaves differently with different types of objects as it attempts to produce the most relevant, rather than complete information.
+
+* If the object is a module object, the list contains the names of the module’s attributes.
+* If the object is a type or class object, the list contains the names of its attributes, and recursively of the attributes of its bases.
+* Otherwise, the list contains the object’s attributes’ names, the names of its class’s attributes, and recursively of the attributes of its class’s base classes.
+
 ### divmod(a, b)
 
+Takes two non-complex numbers as arguments and returns a pair of numbers consisting of their quotient and remainder when using integer division. Literally "divide" "modulo". `divmod(9, 2)` will return `(4, 1)`.
+
 ## E
+
+_enumerate_, _eval_, _exec_
 
 ### enumerate(iterable, start=0)
 
@@ -120,15 +169,19 @@ _delattr_, _dict_, _dir_, _divmod_
 
 ## F
 
+_filter_, _float_, _format_, _frozenset_
+
 ### filter(function, iterable)
 
 ### _class_ float([x])
 
 ### format(value[, format_spec])
 
-### _class_ forzenset([iterable])
+### _class_ frozenset([iterable])
 
 ## G
+
+_getattr_, _globals_
 
 ### getattr(obj, name[, default])
 
